Fix tab spacing in custom css

--- a/quartz/quartz/styles/custom.scss
+++ b/quartz/quartz/styles/custom.scss
@@ -26,7 +26,8 @@ h2::before {
 }
 
 code {
-  white-space: pre-line;
+  tab-size: 4;
+  white-space: pre-wrap;
   font-variant-ligatures: none;
 }
 
